add native image support